--- a/.github/workflows/playwright-reproduce-freezing.yml
+++ b/.github/workflows/playwright-reproduce-freezing.yml
@@ -30,6 +30,8 @@ jobs:
         shell: bash
         run: |
           npm ci --ignore-scripts
+          echo "# ${{ matrix.browser }} ${{ matrix.image }}" >> "${GITHUB_STEP_SUMMARY}"
+          npx envinfo --preset playwright --markdown >> "${GITHUB_STEP_SUMMARY}"
           
       - name: make it freeze
         shell: bash
