--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@playwright/test": "^1.24.2"
+    "@playwright/test": "^1.24.2",
+    "envinfo": "^7.8.1"
   }
 }
