try ubuntu 22 host runner

--- a/.github/workflows/playwright-reproduce-freezing.yml
+++ b/.github/workflows/playwright-reproduce-freezing.yml
@@ -7,7 +7,7 @@ on:
 jobs:
   freeze-me:
     name: Freeze ${{ matrix.browser }} ${{ matrix.image }}
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     strategy:
       fail-fast: false
       matrix:
